This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/7/21: Fixed saving of non-square images, broken 1/30.

2/6/21: Added script command to do File - Open Old, made some commands able to
work on a buffer in the FFT window, and added command to test if that is open.

2/4/21: Fixed losing names in Script-Run menu if Script-Verbose is hidden.

1/30/21: Added support for Falcon 4.

1/27/21: Fixed Extra Division by 2 being enabled for FEI cameras (In 3.8).

1/15/21: Use Trial Size for image/stage shift calibrations will also use the
current Trial subarea offset from center as well (In 3.8).

* 1/15/21: Revised instructions to say that FrameGPU and new CUDA dll's should
unpack to Shrmemframe, and made the installer move the dll's from Plugins to
Shrmemframe; this will restore direct GPU access from SEMCCD on some systems.
(In 3.8).

1/14/21: Changed terminology for STEM in Camera Setup dialog.

1/12/21: Echo in scripts will now preserve indentation. There are now variables
defined with the script name and long name.

1/10/21: Expanded ability to hide dialog elements and made it possible to
close up empty space in control panels after hiding.

1/8/21: Made various normalizations happen after a mag change on a JEOL if
appropriate lens change sequences are defined for each relevant type.

1/8/21: Fixed projector normalization when changing mag, broken 12/16.

1/8/21: Fixed beam autocenter intensity being set to current trial value when
dialog is opened or Trial is gone to with scope tracking on, broken 12/15.

1/8/21: Added script commands EchoNoVarSub to echo without variable
substitutions, ReportEnvironVar to get an environment variable, and
ReportSettingsFile and ReportSettingsFile.
