@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/9/21: Added script commands to change frame and exposure times together by a
+factor, and to adjust dose outputs in the .mdoc file.
+
 2/7/21: Fixed saving of non-square images, broken 1/30.
 
 2/6/21: Added script command to do File - Open Old, made some commands able to
